--- a/source/views/blocks/footer.html
+++ b/source/views/blocks/footer.html
@@ -1,5 +1,150 @@
 <footer class="footer">
-  <div class="container">
-    © 2022 Swimming Pool Plastering-Tile-Coping
+  <div class="page_container">
+    <nav class="footer__menu">
+      <div class="footer__menu_section">
+        <h2 class="footer__title">Navigation</h2>
+        <ul class="footer__navigation_list">
+          <li class="footer__navigation_list_item">
+            <a href="#" class="footer__menu_link">About us</a>
+          </li>
+          <li class="footer__navigation_list_item">
+            <a href="../blog.html" class="footer__menu_link">Blog</a>
+          </li>
+          <li class="footer__navigation_list_item">
+            <a href="#" class="footer__menu_link">Design Services</a>
+          </li>
+          <li class="footer__navigation_list_item">
+            <a href="#" class="footer__menu_link">Featured On</a>
+          </li>
+          <li class="footer__navigation_list_item">
+            <a href="../toys.html" class="footer__menu_link"
+              >2018 Holiday Catalog</a
+            >
+          </li>
+          <li class="footer__navigation_list_item">
+            <a href="#" class="footer__menu_link">Shop By Designer</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__menu_section">
+        <h2 class="footer__title">Custumer Information</h2>
+        <ul class="footer__custumer_info_list">
+          <li class="footer__custumer_info_list_item">
+            <a href="./contactUs.html" class="footer__menu_link">Contact Us</a>
+          </li>
+          <li class="footer__custumer_info_list_item">
+            <a href="#" class="footer__menu_link">Sale Exclusions</a>
+          </li>
+          <li class="footer__custumer_info_list_item">
+            <a href="#" class="footer__menu_link">Shippings & Returns</a>
+          </li>
+          <li class="footer__custumer_info_list_item">
+            <a href="#" class="footer__menu_link">Terms & Conditions</a>
+          </li>
+          <li class="footer__custumer_info_list_item">
+            <a href="#" class="footer__menu_link">Privacy Policy</a>
+          </li>
+          <li class="footer__custumer_info_list_item">
+            <a href="#" class="footer__menu_link">Search</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__menu_section">
+        <h2 class="footer__title">Connect</h2>
+        <form class="footer__subscribe">
+          <input
+            type="email"
+            class="subscribe_email"
+            placeholder="Email"
+            required
+          />
+          <button class="button subscribe_button">Join</button>
+        </form>
+        <div class="social_lincs">
+          <ul class="social_links_list">
+            <li class="social_links_item">
+              <a href="https://facebook.com" class="social_link facebook"
+                ><span class="social_link_text">Facebook</span></a
+              >
+            </li>
+            <li class="social_links_item">
+              <a href="https://twitter.com" class="social_link twitter"
+                ><span class="social_link_text">Twitter</span></a
+              >
+            </li>
+            <li class="social_links_item">
+              <a href="https://www.pinterest.com" class="social_link pinterest"
+                ><span class="social_link_text">Pinterest</span></a
+              >
+            </li>
+            <li class="social_links_item">
+              <a href="http://instagram.com" class="social_link instagram"
+                ><span class="social_link_text">Instagram</span></a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="footer__additional_info">
+      <fieldset class="footer__additional_info_container">
+        <span class="rating_caption footer__menu_link"> Company Rating </span>
+        <div class="rating__group">
+          <input
+            class="rating_star"
+            type="radio"
+            id="star-1"
+            name="rating"
+            value="1"
+            aria-label="Очень плохо"
+            tabindex="0"
+          />
+          <input
+            class="rating_star"
+            type="radio"
+            id="star-2"
+            name="rating"
+            value="2"
+            aria-label="Бывало и лучше"
+            tabindex="0"
+          />
+          <input
+            class="rating_star"
+            type="radio"
+            id="star-3"
+            name="rating"
+            value="1"
+            aria-label="Сойдёт"
+            tabindex="0"
+          />
+          <input
+            class="rating_star"
+            type="radio"
+            id="star-4"
+            name="rating"
+            value="2"
+            aria-label="Ну нормально"
+            tabindex="0"
+          />
+          <input
+            class="rating_star"
+            type="radio"
+            id="star-5"
+            name="rating"
+            value="2"
+            aria-label="Превосходно"
+            tabindex="0"
+          />
+        </div>
+      </fieldset>
+      <div class="footer__additional_info_container footer__menu_link">
+        <p>Copyright © 2018 Dlk • Design Life Kids</p>
+      </div>
+      <div class="footer__additional_info_container">
+        <a href="https://directline.digital/" class="developer_link"
+          >Web Design — Direct Line Development</a
+        >
+      </div>
+    </div>
   </div>
 </footer>
