--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -16,6 +16,7 @@
   Import all other blocks
 */
 @import "_blocks/container";
+@import "_blocks/header";
 @import "_blocks/footer";
 
 /*
@@ -34,27 +35,774 @@
   Не стал выносить в отдельный файл, но если бы блок coming-soon действительно был бы нужен,
   то он должен был бы быть в файле _blocks/coming-soon.scss
 */
+.main {
+  margin-top: 230px;
+}
 
-.coming-soon {
-  color: $color-text;
+////////////////////////////////////////////////////////////////////
+/////////////////////INDEX/////////start///////////////////////////
+/// ////////////////////////////////////////////////////////////////
+
+/* Стили баннера */
+
+.banner__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  min-height: calc(100vh - 100px);
-  margin: auto;
-  padding: 0 5vw;
+  background-color: #eee4db;
+  padding: 17px 30px;
+  position: relative;
 
-  &__title {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: space-between;
-    font-size: 25vw;
-    font-weight: 400;
-    margin: 0 auto;
-    text-transform: uppercase;
-    width: 100%;
+  &::after {
+    content: "";
+    width: 56%;
+    height: 131%;
+    right: 89px;
+    bottom: -30px;
+    z-index: 0;
+    background-image: url("/img/images/bannerMonster.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    position: absolute;
   }
 }
+
+.banner__number {
+  font-size: 60px;
+  line-height: 73px;
+  font-weight: 200;
+  opacity: 5%;
+}
+.banner__change_buttons {
+  padding-left: 0;
+}
+
+.banner__change_button {
+  background-color: #d6cac2;
+  height: 3px;
+  width: 31px;
+  display: block;
+  border-width: 0;
+  margin-top: 12px;
+  margin-right: auto;
+  margin-bottom: 11px;
+
+  &:hover {
+    background: #725f5b;
+    cursor: pointer;
+  }
+}
+
+.banner__content_container {
+  margin-left: 44px;
+  margin-top: 69px;
+  margin-bottom: 72px;
+  width: 45%;
+  z-index: 1;
+}
+
+.banner__title {
+  font-size: 40px;
+  text-transform: uppercase;
+  line-height: 110%;
+  margin: 0;
+  padding-top: 8px;
+}
+
+.banner__design_info {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 26px;
+  margin-top: 15px;
+  margin-bottom: 20px;
+}
+
+.banner__footer {
+  font-weight: 700;
+  font-size: 12px;
+  color: #ffffff;
+  line-height: 16px;
+  text-transform: uppercase;
+  text-align: center;
+  background: #c29974;
+  padding: 11px;
+  margin: 0;
+  position: relative;
+  z-index: 1;
+}
+
+/* Стили Category products */
+
+.category__scroll {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 30px;
+  max-width: 680px;
+}
+.category__btn_left,
+.category__btn_right {
+  display: block;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 37px;
+  height: 37px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: rgba(112, 187, 220, 0.2);
+  border: 0;
+}
+.category__btn_left {
+  background-image: url(../img/icons/btnLeft.svg);
+}
+.category__btn_right {
+  background-image: url(../img/icons/btnRight.svg);
+  margin-left: 6px;
+  margin-right: 20px;
+}
+.category__btn_text {
+  display: none;
+}
+
+.category__nav_commentary {
+  max-width: 580px;
+}
+
+/* Стили Сервисы */
+
+.service {
+  margin-top: 90px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.service__picture {
+  width: 40%;
+}
+.service__img {
+  width: 480px;
+}
+.service__info {
+  padding: 32px 100px 57px 127px;
+  width: 60%;
+}
+
+.service__title {
+  font-size: 38px;
+  line-height: 46px;
+  text-transform: uppercase;
+}
+.service__list {
+  margin-top: 6px;
+}
+
+.hidden_item {
+  display: none;
+}
+
+/* Стилизация кнопок сервисов*/
+.service__button {
+  font-weight: 400;
+  font-size: 26px;
+  line-height: 34px;
+  width: 326px;
+  height: 55px;
+  text-align: start;
+  border-width: 0;
+  padding: 0;
+  background-color: white;
+  position: relative;
+
+  &::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: -60px;
+  }
+  &:hover:before {
+    background-color: #70bbdc33;
+  }
+
+  &:focus {
+    font-weight: 700;
+  }
+  &:focus:before {
+    background-color: #70bbdc33;
+  }
+}
+
+.service_text {
+  margin-top: 20px;
+  margin-bottom: 25px;
+}
+
+.service_text > p:nth-child(2) {
+  margin-top: 15px;
+}
+
+/* Стилизация секции партнеры*/
+
+.parters__title {
+  display: none;
+}
+.partners__list {
+  margin-top: 88px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.partners__list_item {
+  width: auto;
+}
+
+/* Стилизация секции с дополнительной информацией и картой*/
+
+.additional_services {
+  margin: 111px 37px 156px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-column-gap: 57px;
+  -moz-column-gap: 57px;
+  column-gap: 57px;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+}
+.additional_service {
+  padding: 0 30px 27px 30px;
+  width: calc((100% - 57px) / 2);
+  background: #e1f0f7;
+}
+
+.additional_service__title {
+  margin-top: -27px;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  font-size: 38px;
+  line-height: 46px;
+}
+.additional_service__notice {
+  margin-top: 15px;
+  font-weight: 400;
+  font-size: 26px;
+  line-height: 34px;
+  text-transform: capitalize;
+}
+.additional_service__text {
+  margin-top: 10px;
+  font-weight: 400;
+}
+.buy_now_button {
+  margin-top: 20px;
+}
+.contacts {
+  width: calc((100% - 57px) / 2);
+  padding: 0px 30px 0 30px;
+  background: #e1f0f7;
+}
+
+.contacts__text {
+  margin-top: 20px;
+}
+
+.map {
+  margin-top: 30px;
+  margin-bottom: -133px;
+  width: 100%;
+}
+
+/* Стилизация Popup "Contact_us" */
+.popup_container {
+  position: fixed;
+  display: none;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #7d97dacc;
+  z-index: 9999;
+}
+
+.contact_form_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.popup_close {
+  display: inline-block;
+  margin-left: 10px;
+  border: none;
+  background: none;
+  width: 15px;
+  height: 15px;
+  background-image: url("../img/icons/crossExit.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  &:hover {
+    opacity: 0.5;
+    cursor: pointer;
+  }
+}
+
+.popup_title {
+  display: none;
+}
+
+.open_popup {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+////////////////////////////////////////////////////////////////////
+/////////////////////INDEX/////////end///////////////////////////
+////////////////////////////////////////////////////////////////////
+
+////////////////////////////////////////////////////////////////////
+/////////////////////BLOG/////////start///////////////////////////
+////////////////////////////////////////////////////////////////////
+
+.blog_list_title {
+  display: none;
+}
+
+.articles__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-column-gap: 20px;
+  -moz-column-gap: 20px;
+  column-gap: 20px;
+  margin-bottom: 54px;
+}
+
+.articles__list_item {
+  width: calc((100% - 20px * 2) / 3);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
+  color: #1e0606;
+
+  &:nth-child(n + 4) {
+    margin-top: 34px;
+  }
+}
+
+.article_date {
+  display: block;
+  margin-top: 13px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  color: #818181;
+}
+
+.article_title {
+  margin: 7px 0 15px 0;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 31px;
+
+  &:hover {
+    text-decoration: underline;
+    cursor: pointer;
+  }
+}
+
+////////////////////////////////////////////////////////////////////
+/////////////////////BLOG/////////end///////////////////////////
+////////////////////////////////////////////////////////////////////
+
+////////////////////////////////////////////////////////////////////
+/////////////////////CATALOG/////////start///////////////////////////
+////////////////////////////////////////////////////////////////////
+
+.catalog_page {
+  margin-bottom: 55px;
+}
+.catalog__list {
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  width: 1080px;
+}
+
+.catalog__list_item:nth-child(6n + 3) {
+  margin-right: 200px;
+}
+
+.catalog__list_item:nth-child(6n + 4) {
+  margin-left: 200px;
+}
+
+.catalog__list_item:nth-child(n + 4) {
+  margin-top: 23px;
+}
+
+.description {
+  padding: 0 300px 0 200px;
+  margin-bottom: 55px;
+}
+
+.description_title {
+  font-weight: 700;
+  font-size: 38px;
+  line-height: 46px;
+  text-transform: uppercase;
+  margin-bottom: 25px;
+}
+
+.description_text > p:nth-child(n + 2) {
+  margin-top: 15px;
+}
+
+////////////////////////////////////////////////////////////////////
+/////////////////////CATALOG/////////end///////////////////////////
+////////////////////////////////////////////////////////////////////
+
+////////////////////////////////////////////////////////////////////
+/////////////////////CONTACT US/////////start///////////////////////////
+////////////////////////////////////////////////////////////////////
+
+.page_content_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 50px;
+}
+
+.contact_us {
+  margin-bottom: 57px;
+}
+
+.contact_us_title {
+  word-spacing: 0.3em;
+}
+
+.contact_form {
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  margin-right: 120px;
+}
+
+.support_info > p {
+  margin-bottom: 20px;
+}
+
+.support_appeal {
+  font-weight: 600;
+  font-size: 26px;
+  line-height: 34px;
+  text-transform: uppercase;
+  color: #c29974;
+}
+
+////////////////////////////////////////////////////////////////////
+/////////////////////CONTACT US/////////end///////////////////////////
+////////////////////////////////////////////////////////////////////
+
+////////////////////////////////////////////////////////////////////
+/////////////////////TOYS/////////start///////////////////////////
+////////////////////////////////////////////////////////////////////
+
+/* //////////////Стилизация поле с фильтрами//////////// */
+
+.search_filter_title {
+  display: none;
+}
+
+.filter_section_container {
+  background-color: #7d97da33;
+  padding: 39px 0;
+}
+
+.product_filter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+/* Слайдер */
+
+.slider_values {
+  width: 207px;
+  height: 89px;
+}
+.cost_field {
+  display: none;
+
+  width: 202px;
+}
+.cost_filter_title {
+}
+.cost_filter_title:after {
+  content: "";
+  display: block;
+  width: 207px;
+  height: 24px;
+  margin-top: 13px;
+  margin-bottom: -11px;
+  background-image: url("/img/icons/sliderPlug.png");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.cost_values_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.filter_title {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 22px;
+  margin-bottom: 15px;
+}
+
+/* color checkbox */
+.color_selection {
+  margin-left: 94px;
+}
+
+.color_selection__list_item:nth-child(n + 2) {
+  margin-top: 15px;
+}
+
+.color_checkbox {
+  display: none;
+}
+
+.checkbox_name:before {
+  content: "";
+  display: inline-block;
+  vertical-align: sub;
+  width: 20px;
+  height: 20px;
+  background-image: url("../img/icons/checkbox.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-right: 10px;
+}
+
+.color_checkbox:checked ~ .checkbox_name:before {
+  background-image: url("../img/icons/checkboxChecked.svg");
+}
+
+.checkbox_name:hover {
+  text-decoration: underline;
+}
+
+/* delivery radio */
+.delivery_selection {
+  margin-left: 124px;
+}
+
+.delivery_group_list_item:nth-child(n + 2) {
+  margin-top: 10px;
+}
+
+.delivery_input {
+  display: none;
+}
+
+.delivery_group_name:before {
+  content: "";
+  display: inline-block;
+  vertical-align: sub;
+  width: 20px;
+  height: 20px;
+  background-image: url("../img/icons/radio.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-right: 10px;
+}
+.delivery_group_name:hover {
+  text-decoration: underline;
+}
+.delivery_input:checked ~ .delivery_group_name:before {
+  background-image: url("../img/icons/radioChecked.png");
+}
+
+/* amount radio */
+.amount_selection {
+  margin-left: 68px;
+}
+
+.amount_selection__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.amount_selection__list_item {
+}
+
+.amount_radio_input {
+  display: none;
+}
+
+.amount_radio_text {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+  width: 80px;
+  height: 35px;
+  background-color: white;
+}
+
+.amount_radio_input:checked ~ .amount_radio_text {
+  background-color: #f3d0db;
+}
+
+/* button  */
+.product_filter_button {
+  margin-top: 37px;
+  margin-left: 60px;
+  height: 40px;
+}
+
+.cost_field,
+.checkbox_name,
+.delivery_group_name,
+.amount_radio_text {
+  cursor: pointer;
+}
+
+.amount_radio_text:hover {
+  opacity: 0.5;
+}
+.amount_radio_text:hover {
+  background-color: #eddeeb;
+}
+
+/* ////////////Стилизация секции с товарами///////// */
+
+.toys_catalog {
+  margin-top: 64px;
+}
+.toys_catalog__title {
+  display: none;
+}
+
+.toys_catalog__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-column-gap: 20px;
+  -moz-column-gap: 20px;
+  column-gap: 20px;
+  margin-bottom: 74px;
+}
+.toys_catalog__list_item {
+  width: calc((100% - 20px * 2) / 3);
+}
+
+.toys_catalog__list_item:nth-child(n + 4) {
+  margin-top: 46px;
+}
+
+.product {
+  padding: 0;
+  position: relative;
+}
+
+.product_title {
+  margin-top: 26px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
+  text-align: center;
+}
+
+.product_price {
+  margin-top: 15px;
+  display: block;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 22px;
+  text-align: center;
+}
+
+.hidden_link {
+  display: none;
+  width: 207px;
+  height: 207px;
+  position: absolute;
+  z-index: 2;
+  background-color: #e5eaf8;
+  top: 18%;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 29px;
+  text-transform: uppercase;
+}
+
+.product:before {
+  content: "Learn more";
+  opacity: 0;
+  width: 207px;
+  height: 207px;
+  position: absolute;
+  z-index: 1;
+  background-color: #e5eaf8;
+  top: 18%;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
+  text-align: center;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 207px;
+  text-transform: uppercase;
+}
+
+.product:hover:before {
+  opacity: 0.9;
+}
+
+.product:active:before {
+  opacity: 0.67;
+}
+
+////////////////////////////////////////////////////////////////////
+/////////////////////TOYS/////////end///////////////////////////
+////////////////////////////////////////////////////////////////////
