--- a/source/views/blocks/footer.html
+++ b/source/views/blocks/footer.html
@@ -1,97 +1,105 @@
 <footer class="footer">
   <div class="page_container">
     <nav class="footer__menu">
-      <div class="footer__menu_section">
-        <h2 class="footer__title">Navigation</h2>
-        <ul class="footer__navigation_list">
-          <li class="footer__navigation_list_item">
-            <a href="#" class="footer__menu_link">About us</a>
+      <div class="navigation">
+        <h2 class="navigation__title">Navigation</h2>
+        <ul class="navigation__list">
+          <li class="navigation__list-item">
+            <a href="#" class="navigation__link">About us</a>
           </li>
-          <li class="footer__navigation_list_item">
-            <a href="../blog.html" class="footer__menu_link">Blog</a>
+          <li class="navigation__list-item">
+            <a href="../blog.html" class="navigation__link">Blog</a>
           </li>
-          <li class="footer__navigation_list_item">
-            <a href="#" class="footer__menu_link">Design Services</a>
+          <li class="navigation__list-item">
+            <a href="#" class="navigation__link">Design Services</a>
           </li>
-          <li class="footer__navigation_list_item">
-            <a href="#" class="footer__menu_link">Featured On</a>
+          <li class="navigation__list-item">
+            <a href="#" class="navigation__link">Featured On</a>
           </li>
-          <li class="footer__navigation_list_item">
-            <a href="../toys.html" class="footer__menu_link"
+          <li class="navigation__list-item">
+            <a href="../toys.html" class="navigation__link"
               >2018 Holiday Catalog</a
             >
           </li>
-          <li class="footer__navigation_list_item">
-            <a href="#" class="footer__menu_link">Shop By Designer</a>
+          <li class="navigation__list-item">
+            <a href="#" class="navigation__link">Shop By Designer</a>
           </li>
         </ul>
       </div>
-      <div class="footer__menu_section">
-        <h2 class="footer__title">Custumer Information</h2>
-        <ul class="footer__custumer_info_list">
-          <li class="footer__custumer_info_list_item">
-            <a href="./contactUs.html" class="footer__menu_link">Contact Us</a>
+      <div class="navigation">
+        <h2 class="navigation__title">Custumer Information</h2>
+        <ul class="navigation__list">
+          <li class="navigation__list-item">
+            <a href="./contactUs.html" class="navigation__link">Contact Us</a>
           </li>
-          <li class="footer__custumer_info_list_item">
-            <a href="#" class="footer__menu_link">Sale Exclusions</a>
+          <li class="navigation__list-item">
+            <a href="#" class="navigation__link">Sale Exclusions</a>
           </li>
-          <li class="footer__custumer_info_list_item">
-            <a href="#" class="footer__menu_link">Shippings & Returns</a>
+          <li class="navigation__list-item">
+            <a href="#" class="navigation__link">Shippings & Returns</a>
           </li>
-          <li class="footer__custumer_info_list_item">
-            <a href="#" class="footer__menu_link">Terms & Conditions</a>
+          <li class="navigation__list-item">
+            <a href="#" class="navigation__link">Terms & Conditions</a>
           </li>
-          <li class="footer__custumer_info_list_item">
-            <a href="#" class="footer__menu_link">Privacy Policy</a>
+          <li class="navigation__list-item">
+            <a href="#" class="navigation__link">Privacy Policy</a>
           </li>
-          <li class="footer__custumer_info_list_item">
-            <a href="#" class="footer__menu_link">Search</a>
+          <li class="navigation__list-item">
+            <a href="#" class="navigation__link">Search</a>
           </li>
         </ul>
       </div>
-      <div class="footer__menu_section">
-        <h2 class="footer__title">Connect</h2>
-        <form class="footer__subscribe">
+      <div class="navigation">
+        <h2 class="navigation__title">Connect</h2>
+        <form class="subscribe">
           <input
             type="email"
-            class="subscribe_email"
+            class="subscribe__field"
             placeholder="Email"
             required
           />
-          <button class="button subscribe_button">Join</button>
+          <button class="button">Join</button>
         </form>
-        <div class="social_lincs">
-          <ul class="social_links_list">
-            <li class="social_links_item">
-              <a href="https://facebook.com" class="social_link facebook"
-                ><span class="social_link_text">Facebook</span></a
+        <div class="social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a
+                href="https://facebook.com"
+                class="social__link social__facebook"
+                ><span class="hidden-item">Facebook</span></a
               >
             </li>
-            <li class="social_links_item">
-              <a href="https://twitter.com" class="social_link twitter"
-                ><span class="social_link_text">Twitter</span></a
+            <li class="social__item">
+              <a href="https://twitter.com" class="social__link social__twitter"
+                ><span class="hidden-item">Twitter</span></a
               >
             </li>
-            <li class="social_links_item">
-              <a href="https://www.pinterest.com" class="social_link pinterest"
-                ><span class="social_link_text">Pinterest</span></a
+            <li class="social__item">
+              <a
+                href="https://www.pinterest.com"
+                class="social__link social__pinterest"
+                ><span class="hidden-item">Pinterest</span></a
               >
             </li>
-            <li class="social_links_item">
-              <a href="http://instagram.com" class="social_link instagram"
-                ><span class="social_link_text">Instagram</span></a
+            <li class="social__item">
+              <a
+                href="http://instagram.com"
+                class="social__link social__instagram"
+                ><span class="hidden-item">Instagram</span></a
               >
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <div class="footer__additional_info">
-      <fieldset class="footer__additional_info_container">
-        <span class="rating_caption footer__menu_link"> Company Rating </span>
-        <div class="rating__group">
+    <div class="footer__info">
+      <fieldset class="footer__info-container">
+        <span class="footer__rating-caption navigation__link">
+          Company Rating
+        </span>
+        <div class="rating">
           <input
-            class="rating_star"
+            class="rating__star"
             type="radio"
             id="star-1"
             name="rating"
@@ -100,7 +108,7 @@
             tabindex="0"
           />
           <input
-            class="rating_star"
+            class="rating__star"
             type="radio"
             id="star-2"
             name="rating"
@@ -109,7 +117,7 @@
             tabindex="0"
           />
           <input
-            class="rating_star"
+            class="rating__star"
             type="radio"
             id="star-3"
             name="rating"
@@ -118,7 +126,7 @@
             tabindex="0"
           />
           <input
-            class="rating_star"
+            class="rating__star"
             type="radio"
             id="star-4"
             name="rating"
@@ -127,7 +135,7 @@
             tabindex="0"
           />
           <input
-            class="rating_star"
+            class="rating__star"
             type="radio"
             id="star-5"
             name="rating"
@@ -137,11 +145,11 @@
           />
         </div>
       </fieldset>
-      <div class="footer__additional_info_container footer__menu_link">
+      <div class="footer__info-container navigation__link">
         <p>Copyright © 2018 Dlk • Design Life Kids</p>
       </div>
-      <div class="footer__additional_info_container">
-        <a href="https://directline.digital/" class="developer_link"
+      <div class="footer__info-container">
+        <a href="https://directline.digital/" class="footer__developer-link"
           >Web Design — Direct Line Development</a
         >
       </div>
