--- a/source/views/blocks/header.html
+++ b/source/views/blocks/header.html
@@ -1,14 +1,14 @@
-<div class="header_wrapper">
+<div class="header">
   <div class="page_container">
-    <header class="header">
-      <a href="/index.html" class="logo_link">
+    <header class="header__content">
+      <a href="/index.html" class="header__logo-link">
         <svg
           width="102"
           height="52"
           viewBox="0 0 102 52"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
-          class="logo element_condition"
+          class="header__logo"
         >
           <path
             fill-rule="evenodd"
@@ -26,21 +26,21 @@
           />
         </svg>
       </a>
-      <nav class="nav">
-        <ul class="nav__list">
-          <li class="nav__list_item element_condition">
-            <a href="../blog.html" class="nav__link">Blog</a>
+      <nav class="header__nav">
+        <ul class="header__nav-list">
+          <li class="header__list-item">
+            <a href="../blog.html" class="header__nav-link">Blog</a>
           </li>
-          <li class="nav__list_item element_condition">
-            <a href="../catalog.html" class="nav__link">Catalog</a>
+          <li class="header__list-item">
+            <a href="../catalog.html" class="header__nav-link">Catalog</a>
           </li>
-          <li class="nav__list_item element_condition">
-            <a href="#" class="nav__link">About us</a>
+          <li class="header__list-item">
+            <a href="#" class="header__nav-link">About us</a>
           </li>
         </ul>
       </nav>
       <svg
-        class="search_button element_condition"
+        class="header__search-button"
         width="25"
         height="24"
         viewBox="0 0 25 24"
@@ -52,9 +52,7 @@
           fill="#1E0606"
         />
       </svg>
-      <a href="../contactUs.html" class="contact_us_link element_condition"
-        >Contact us</a
-      >
+      <a href="../contactUs.html" class="header__contact-us-link">Contact us</a>
     </header>
   </div>
 </div>
