--- a/source/scss/_blocks/container.scss
+++ b/source/scss/_blocks/container.scss
@@ -1,5 +1,7 @@
-.container {
-  padding: 0 20px;
-  margin: 0 auto;
-  max-width: 1220px;
+.page-container {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 1180px;
+  margin-left: auto;
+  margin-right: auto;
 }
