--- a/source/scss/_blocks/header.scss
+++ b/source/scss/_blocks/header.scss
@@ -1,5 +1,12 @@
 /* Стилизация header*/
 .header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 10;
+  background-color: #ffffff;
+}
+.header__content {
   padding: 50px 0 0 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -15,45 +22,36 @@
   align-items: center;
   width: 1180px;
 }
-.logo_link {
+.header__logo-link {
   display: flex;
   align-content: center;
 }
-.logo {
+.header__logo {
   display: block;
   margin-top: auto;
 }
-.header_wrapper {
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: 10;
-  background-color: #ffffff;
-}
 
-.nav {
-}
-.nav__list {
+.header__nav-list {
   margin-left: 58px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   min-width: 240px;
 }
-.nav__list_item {
+.header__list-item {
   margin-right: 20px;
   font-size: 14px;
   text-transform: uppercase;
 }
 
-.nav__link {
+.header__nav-link {
   color: inherit;
 }
-.search_button {
+.header__search-button {
   margin-left: auto;
   cursor: pointer;
 }
-.contact_us_link {
+.header__contact-us-link {
   margin-left: 19px;
   text-decoration: none;
   text-transform: uppercase;
@@ -65,18 +63,19 @@
   word-spacing: 0.3em;
 }
 
-.logo:hover,
-.nav__list_item:hover,
-.search_button:hover,
-.contact_us_link:hover {
-  opacity: 0.5;
-  fill-opacity: 0.5;
-}
-
-.logo:active,
-.nav__list_item:active,
-.search_button:active,
-.contact_us_link:active {
-  opacity: 0.5;
-  fill-opacity: 0.2;
+.header {
+  &__logo:hover,
+  &__list-item:hover,
+  &__search-button:hover,
+  &__contact-us-link:hover {
+    opacity: 0.5;
+    fill-opacity: 0.5;
+  }
+  &__logo:active,
+  &__list-item:active,
+  &__search-button:active,
+  &__contact-us-link:active {
+    opacity: 0.5;
+    fill-opacity: 0.2;
+  }
 }
