--- a/source/scss/_utils.scss
+++ b/source/scss/_utils.scss
@@ -21,3 +21,16 @@
 .u-invisible {
   visibility: hidden;
 }
+
+.hidden-item {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
