--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -18,7 +18,10 @@
 @import "_blocks/container";
 @import "_blocks/header";
 @import "_blocks/footer";
-
+@import "_blocks/checkbox";
+@import "_blocks/contact-form";
+@import "_blocks/page-nav";
+@import "_blocks/product";
 /*
   Ниже пример подключения других блоков
 
@@ -74,11 +77,11 @@
   font-weight: 200;
   opacity: 5%;
 }
-.banner__change_buttons {
+.banner__change-buttons {
   padding-left: 0;
 }
 
-.banner__change_button {
+.banner__button {
   background-color: #d6cac2;
   height: 3px;
   width: 31px;
@@ -94,7 +97,7 @@
   }
 }
 
-.banner__content_container {
+.banner__content {
   margin-left: 44px;
   margin-top: 69px;
   margin-bottom: 72px;
@@ -110,7 +113,7 @@
   padding-top: 8px;
 }
 
-.banner__design_info {
+.banner__design-info {
   font-weight: 400;
   font-size: 20px;
   line-height: 26px;
@@ -141,8 +144,8 @@
   margin-top: 30px;
   max-width: 680px;
 }
-.category__btn_left,
-.category__btn_right {
+.category__btn-left,
+.category__btn-right {
   display: block;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -153,19 +156,19 @@
   background-color: rgba(112, 187, 220, 0.2);
   border: 0;
 }
-.category__btn_left {
+.category__btn-left {
   background-image: url(../img/icons/btnLeft.svg);
 }
-.category__btn_right {
+.category__btn-right {
   background-image: url(../img/icons/btnRight.svg);
   margin-left: 6px;
   margin-right: 20px;
 }
-.category__btn_text {
+.category__btn-text {
   display: none;
 }
 
-.category__nav_commentary {
+.category__scroll-commentary {
   max-width: 580px;
 }
 
@@ -197,10 +200,6 @@
   margin-top: 6px;
 }
 
-.hidden_item {
-  display: none;
-}
-
 /* Стилизация кнопок сервисов*/
 .service__button {
   font-weight: 400;
@@ -225,7 +224,6 @@
   &:hover:before {
     background-color: #70bbdc33;
   }
-
   &:focus {
     font-weight: 700;
   }
@@ -234,13 +232,12 @@
   }
 }
 
-.service_text {
+.service__text {
   margin-top: 20px;
   margin-bottom: 25px;
-}
-
-.service_text > p:nth-child(2) {
-  margin-top: 15px;
+  & > p:nth-child(2) {
+    margin-top: 15px;
+  }
 }
 
 /* Стилизация секции партнеры*/
@@ -262,13 +259,13 @@
   -ms-flex-align: center;
   align-items: center;
 }
-.partners__list_item {
+.partners__list-item {
   width: auto;
 }
 
 /* Стилизация секции с дополнительной информацией и картой*/
 
-.additional_services {
+.supplement {
   margin: 111px 37px 156px 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -280,51 +277,50 @@
   -ms-flex-align: start;
   align-items: flex-start;
 }
-.additional_service {
+.supplement__article {
   padding: 0 30px 27px 30px;
   width: calc((100% - 57px) / 2);
   background: #e1f0f7;
 }
 
-.additional_service__title {
+.supplement__title {
   margin-top: -27px;
   margin-bottom: 10px;
   text-transform: uppercase;
   font-size: 38px;
   line-height: 46px;
 }
-.additional_service__notice {
+.supplement__notice {
   margin-top: 15px;
   font-weight: 400;
   font-size: 26px;
   line-height: 34px;
   text-transform: capitalize;
 }
-.additional_service__text {
+.supplement__text {
   margin-top: 10px;
   font-weight: 400;
+  margin-bottom: 20px;
 }
-.buy_now_button {
-  margin-top: 20px;
-}
-.contacts {
+
+.supplement__contacts {
   width: calc((100% - 57px) / 2);
   padding: 0px 30px 0 30px;
   background: #e1f0f7;
 }
 
-.contacts__text {
+.supplement__contacts-text {
   margin-top: 20px;
 }
 
-.map {
+.supplement__map {
   margin-top: 30px;
   margin-bottom: -133px;
   width: 100%;
 }
 
 /* Стилизация Popup "Contact_us" */
-.popup_container {
+.popup {
   position: fixed;
   display: none;
   -webkit-box-pack: center;
@@ -341,13 +337,13 @@
   z-index: 9999;
 }
 
-.contact_form_wrapper {
+.popup__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.popup_close {
+.popup__close {
   display: inline-block;
   margin-left: 10px;
   border: none;
@@ -365,11 +361,7 @@
   }
 }
 
-.popup_title {
-  display: none;
-}
-
-.open_popup {
+.open-popup {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -381,10 +373,6 @@
 ////////////////////////////////////////////////////////////////////
 /////////////////////BLOG/////////start///////////////////////////
 ////////////////////////////////////////////////////////////////////
-
-.blog_list_title {
-  display: none;
-}
 
 .articles__list {
   display: -webkit-box;
@@ -398,7 +386,7 @@
   margin-bottom: 54px;
 }
 
-.articles__list_item {
+.articles__list-item {
   width: calc((100% - 20px * 2) / 3);
   font-weight: 400;
   font-size: 18px;
@@ -410,7 +398,7 @@
   }
 }
 
-.article_date {
+.articles__date {
   display: block;
   margin-top: 13px;
   font-weight: 400;
@@ -419,7 +407,7 @@
   color: #818181;
 }
 
-.article_title {
+.articles__title {
   margin: 7px 0 15px 0;
   font-weight: 700;
   font-size: 24px;
@@ -439,7 +427,7 @@
 /////////////////////CATALOG/////////start///////////////////////////
 ////////////////////////////////////////////////////////////////////
 
-.catalog_page {
+.catalog {
   margin-bottom: 55px;
 }
 .catalog__list {
@@ -448,32 +436,26 @@
   width: 1080px;
 }
 
-.catalog__list_item:nth-child(6n + 3) {
-  margin-right: 200px;
+.catalog__list-item {
+  &:nth-child(6n + 3) {
+    margin-right: 200px;
+  }
+  &:nth-child(6n + 4) {
+    margin-left: 200px;
+  }
+  &:nth-child(n + 4) {
+    margin-top: 23px;
+  }
 }
 
-.catalog__list_item:nth-child(6n + 4) {
-  margin-left: 200px;
-}
-
-.catalog__list_item:nth-child(n + 4) {
-  margin-top: 23px;
-}
-
-.description {
+.catalog__description {
   padding: 0 300px 0 200px;
   margin-bottom: 55px;
 }
-
-.description_title {
-  font-weight: 700;
-  font-size: 38px;
-  line-height: 46px;
-  text-transform: uppercase;
-  margin-bottom: 25px;
+.catalog__description-text {
+  margin-top: 25px;
 }
-
-.description_text > p:nth-child(n + 2) {
+.catalog__description-text > p:nth-child(n + 2) {
   margin-top: 15px;
 }
 
@@ -485,32 +467,29 @@
 /////////////////////CONTACT US/////////start///////////////////////////
 ////////////////////////////////////////////////////////////////////
 
-.page_content_wrapper {
+.contact-us__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin-bottom: 50px;
 }
 
-.contact_us {
+.contact-us {
   margin-bottom: 57px;
 }
 
-.contact_us_title {
+.contact-us__title {
   word-spacing: 0.3em;
 }
 
-.contact_form {
-  -ms-flex-negative: 0;
-  flex-shrink: 0;
-  margin-right: 120px;
+.contact-us__support-info {
+  margin-left: 120px;
+  & > p {
+    margin-bottom: 20px;
+  }
 }
 
-.support_info > p {
-  margin-bottom: 20px;
-}
-
-.support_appeal {
+.contact-us__support-appeal {
   font-weight: 600;
   font-size: 26px;
   line-height: 34px;
@@ -528,16 +507,12 @@
 
 /* //////////////Стилизация поле с фильтрами//////////// */
 
-.search_filter_title {
-  display: none;
-}
-
-.filter_section_container {
+.filter {
   background-color: #7d97da33;
   padding: 39px 0;
 }
 
-.product_filter {
+.filter__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -545,16 +520,16 @@
 
 /* Слайдер */
 
-.slider_values {
+.filter__slider-values {
   width: 207px;
   height: 89px;
 }
-.cost_field {
+.filter__cost-field {
   display: none;
-
   width: 202px;
 }
-.cost_filter_title {
+
+.filter__cost-title {
   &:after {
     content: "";
     display: block;
@@ -569,7 +544,7 @@
   }
 }
 
-.cost_values_container {
+.filter__cost-values-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -578,65 +553,42 @@
   justify-content: space-between;
 }
 
-.filter_title {
+.filter__title {
   font-weight: 700;
   font-size: 16px;
   line-height: 22px;
   margin-bottom: 15px;
 }
 
-/* color checkbox */
-.color_selection {
+/* color selection */
+
+.filter__color {
   margin-left: 94px;
 }
 
-.color_selection__list_item:nth-child(n + 2) {
+.filter__color-item:nth-child(n + 2) {
   margin-top: 15px;
 }
 
-.color_checkbox {
-  display: none;
-  &:checked ~ .checkbox_name:before {
-    background-image: url("../img/icons/checkboxChecked.svg");
-  }
-}
-
-.checkbox_name {
-  &:before {
-    content: "";
-    display: inline-block;
-    vertical-align: sub;
-    width: 20px;
-    height: 20px;
-    background-image: url("../img/icons/checkbox.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-    margin-right: 10px;
-  }
-  &:hover {
-    text-decoration: underline;
-  }
-}
-
 /* delivery radio */
-.delivery_selection {
+.filter__delivery {
   margin-left: 124px;
 }
 
-.delivery_group_list_item {
+.delivery-group__item {
   &:nth-child(n + 2) {
     margin-top: 10px;
   }
 }
 
-.delivery_input {
+.delivery-group__input {
   display: none;
-  &:checked ~ .delivery_group_name:before {
+  &:checked ~ .delivery-group__name:before {
     background-image: url("../img/icons/radioChecked.png");
   }
 }
 
-.delivery_group_name {
+.delivery-group__name {
   &:before {
     content: "";
     display: inline-block;
@@ -654,47 +606,31 @@
 }
 
 /* amount radio */
-.amount_selection {
+.filter__amount {
   margin-left: 68px;
 }
 
-.amount_selection__list {
+.amount-group {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.amount_radio_input {
+.amount-group__input {
   display: none;
-  &:checked ~ .amount_radio_text {
+  &:checked ~ .amount-group__text {
     background-color: #f3d0db;
   }
 }
 
-.amount_radio_text {
+.amount-group__text {
   display: table-cell;
   text-align: center;
   vertical-align: middle;
   width: 80px;
   height: 35px;
   background-color: white;
-}
 
-/* button  */
-.product_filter_button {
-  margin-top: 37px;
-  margin-left: 60px;
-  height: 40px;
-}
-
-.cost_field,
-.checkbox_name,
-.delivery_group_name,
-.amount_radio_text {
-  cursor: pointer;
-}
-
-.amount_radio_text {
   &:hover {
     opacity: 0.5;
   }
@@ -702,16 +638,31 @@
     background-color: #eddeeb;
   }
 }
+
+/* Filter button  */
+.filter__button {
+  margin-top: 37px;
+  margin-left: 60px;
+  height: 40px;
+}
+
+.filter__cost-field,
+.checkbox__name,
+.delivery-group__name,
+.amount-group__text {
+  cursor: pointer;
+}
+
 /* ////////////Стилизация секции с товарами///////// */
 
-.toys_catalog {
+.toys-catalog {
   margin-top: 64px;
 }
-.toys_catalog__title {
+.toys-catalog__title {
   display: none;
 }
 
-.toys_catalog__list {
+.toys-catalog__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -722,84 +673,11 @@
   column-gap: 20px;
   margin-bottom: 74px;
 }
-.toys_catalog__list_item {
+.toys-catalog__list-item {
   width: calc((100% - 20px * 2) / 3);
   &:nth-child(n + 4) {
     margin-top: 46px;
   }
-}
-
-.product {
-  padding: 0;
-  position: relative;
-  &:before {
-    content: "Learn more";
-    opacity: 0;
-    width: 207px;
-    height: 207px;
-    position: absolute;
-    z-index: 1;
-    background-color: #e5eaf8;
-    top: 18%;
-    left: 50%;
-    -webkit-transform: translate(-50%, 0);
-    -ms-transform: translate(-50%, 0);
-    transform: translate(-50%, 0);
-    text-align: center;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 207px;
-    text-transform: uppercase;
-  }
-
-  &:hover:before {
-    opacity: 0.9;
-  }
-
-  &:active:before {
-    opacity: 0.67;
-  }
-}
-
-.product_title {
-  margin-top: 26px;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 19px;
-  text-align: center;
-}
-
-.product_price {
-  margin-top: 15px;
-  display: block;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 22px;
-  text-align: center;
-}
-
-.hidden_link {
-  display: none;
-  width: 207px;
-  height: 207px;
-  position: absolute;
-  z-index: 2;
-  background-color: #e5eaf8;
-  top: 18%;
-  left: 50%;
-  -webkit-transform: translate(-50%, 0);
-  -ms-transform: translate(-50%, 0);
-  transform: translate(-50%, 0);
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 29px;
-  text-transform: uppercase;
 }
 
 ////////////////////////////////////////////////////////////////////
